--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = gnn_mlp
+name = simplegnn
 version = 0.1.0                     
 author = Emi Minamitani                  
 author_email = eminamitani@sanken.osaka-u.ac.jp
